Fri Nov 13 09:58:31 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (Init_sym): use separate object space.

Thu Nov 12 16:35:42 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (ruby_vm_run): cleanup needed.

	* vm.c (thread_recycle_stack, rb_thread_recycle_stack_release):
	  stack belongs to no object space.

Thu Nov 12 14:33:21 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_win32.c (thread_errno): CreateThread does not set errno.

	* thread.c (thread_create_core): moved failure handling from
	  native_thread_core().

	* thread_pthread.c (native_thread_create): constified.

Thu Nov 12 10:08:56 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* .document: remove documents not in rdoc format until
	  rdoc supports non rdoc files. [ruby-core:26459]

Thu Nov 12 06:42:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tempfile.rb (Tempfile#initialize): option hash may not be
	  given.  [ruby-core:26681]

Thu Nov 12 01:29:15 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* enumerator.c (yielder_yield_push): Yielder#<< should return self.
	  [ruby-dev:39660]

Wed Nov 11 19:17:35 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tempfile.rb (Tempfile#initialize): merge mode option.

	* lib/tmpdir.rb (Dir::Tmpname#create): splat options.

Wed Nov 11 18:20:36 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (rb_objspace_free): finalizer should have been done already.

	* vm.c (rb_vm_free): VM does not belong to any object spaces.

	* vm.c (ruby_make_bare_vm): thread belongs to its VM object space.

Wed Nov 11 12:54:02 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (ruby_setenv): use ruby_strdup().

Wed Nov 11 12:19:27 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* hash.c (ruby_setenv): also set CRT workarea.  ref [ruby-core:25010]

Wed Nov 11 09:36:02 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (w_object, r_object0): use RHASH_IFNONE but not ifnone
	  directly.

Wed Nov 11 08:32:45 2009  Tanaka Akira  <akr@fsij.org>
